# setfit-cefr

./: .gitignore  Justfile  README.md  predict.py  pyproject.toml  train.ipynb  train.py
configs/: default.yaml  notebook.yaml  smoke.yaml
data/: README.md
docs/: models.md
src/setfit_cefr/: __init__.py  cli.py  config.py  data.py  hashing.py  inference.py  notebook_config.py  reporting.py  training.py
tests/: test_config.py  test_hashing.py  test_notebook_config.py  test_reporting.py
