[project]
name = "setfit-cefr"
version = "0.1.0"
description = "SetFit-based CEFR classification with a fully YAML-configurable, reproducible training & inference CLI."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "setfit-cefr contributors" }]

dependencies = [
    "setfit==1.1.3",
    "sentence-transformers>=3.0.0,<4.0.0",
    "transformers>=4.41.0,<4.50.0",
    "datasets>=2.19.0,<3.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0,<2.2.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "torch>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
]

[project.scripts]
setfit-cefr-train = "setfit_cefr.cli:train_main"
setfit-cefr-predict = "setfit_cefr.cli:predict_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setfit_cefr"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
